--- a/app/views/mission_control/jobs/jobs/_filters.html.erb
+++ b/app/views/mission_control/jobs/jobs/_filters.html.erb
@@ -2,7 +2,7 @@
   <div class="field is-grouped">
     <div class="control">
       <%= form_for :filter, url: application_jobs_path(MissionControl::Jobs::Current.application, jobs_status), method: :get,
-        data: { controller: "form", action: "input->form#debouncedSubmit" } do |form| %>
+        data: { controller: "mission-control-jobs--form", action: "input->mission-control-jobs--form#debouncedSubmit" } do |form| %>
 
         <div class="select is-rounded">
           <%= form.text_field :job_class_name, value: @job_filters[:job_class_name], class: "input", list: "job-classes", placeholder: "Filter by job class..." %>
